--- a/app/src/main/res/layout/game_result_view.xml
+++ b/app/src/main/res/layout/game_result_view.xml
@@ -65,7 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#546E7A"
+        android:backgroundTint="#FFA726"
         android:paddingVertical="14dp"
         android:text="메인 화면으로 돌아가기"
         android:textColor="#FFFFFF"
